--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
     "leva": "^0.9.34",
+    "node-sass": "^8.0.0",
     "prettier": "^2.8.7",
     "r3f-perf": "^6.6.3",
     "react": "18.2",
