--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
+    "@react-three/rapier": "^0.9.0",
     "leva": "^0.9.34",
     "node-sass": "^8.0.0",
     "prettier": "^2.8.7",
