--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@react-three/drei": "^9.80.1",
     "@react-three/fiber": "^8.13.6",
+    "@react-three/postprocessing": "^2.15.0",
     "@react-three/rapier": "^1.1.1",
+    "gsap": "^3.5.1",
     "leva": "^0.9.34",
     "node-sass": "^8.0.0",
     "prettier": "^2.8.7",
