--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "r3f-perf": "^6.6.3",
     "react": "18.2",
     "react-dom": "18.2",
+    "react-responsive": "^9.0.2",
     "sass": "^1.62.0",
     "styled-components": "^5.3.10",
     "three": "^0.148.0"
